--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -44,4 +44,28 @@
     <dimen name="flexible_space_image_height_blogger">220dp</dimen>
     <dimen name="flexible_space_height_blogger_with_toolbar">410dp</dimen>
     <dimen name="flexible_space_height_blogger">350dp</dimen>
+
+
+    <!--Article Details dimensions-->
+    <dimen name="article_details_app_bar_height">250dp</dimen>
+    <dimen name="article_details_text_size">18px</dimen>
+    <dimen name="ad_recent_trending_heading">15sp</dimen>
+    <dimen name="ad_recent">15sp</dimen>
+    <dimen name="ad_trending">15sp</dimen>
+    <dimen name="ad_comments_heading">15sp</dimen>
+    <dimen name="ad_comments_username">17sp</dimen>
+    <dimen name="ad_comments_reply_username">14sp</dimen>
+    <dimen name="ad_comments_date">14sp</dimen>
+    <dimen name="ad_comments_edit_text">15sp</dimen>
+    <dimen name="ad_comments_text">14sp</dimen>
+    <dimen name="ad_comments_reply_btn">14sp</dimen>
+    <dimen name="ad_comments_edit_btn">14sp</dimen>
+    <dimen name="ad_comments_add">15sp</dimen>
+    <dimen name="ad_comments_replied">12sp</dimen>
+    <dimen name="ad_comments_replied_count">12sp</dimen>
+    <dimen name="ad_comments_profile_pic_height">54dp</dimen>
+    <dimen name="ad_comments_profile_pic_width">54dp</dimen>
+    <dimen name="ad_related_article_image_height">50dp</dimen>
+    <dimen name="ad_related_article_image_width">70dp</dimen>
+    <dimen name="ad_related_article_title">14sp</dimen>
 </resources>
