--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_family_detail.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_family_detail.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:id="@+id/scroll_view"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
@@ -18,46 +18,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-         <!--   <TextView
-                android:id="@+id/family_profile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="1dp"
-                android:background="@color/white_color"
-                android:drawableRight="@drawable/arrow_xxhdpi"
-                android:gravity="center_vertical"
-                android:padding="15dp"
-                android:text="Family Profile"
-                android:textColor="@color/black_color"
-                android:textSize="15dp" />-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/grey_light"
-                android:orientation="vertical">
-            <!--<ImageView-->
-                <!--android:id="@+id/imgProfile"-->
-                <!--android:layout_width="150dp"-->
-                <!--android:layout_height="150dp"-->
-                <!--android:layout_gravity="center"-->
-                <!--android:padding="10dp"-->
-                <!--android:src="@drawable/family_xxhdpi" />-->
-
-            <!--<EditText-->
-                <!--android:id="@+id/edtFamilyName"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginLeft="20dp"-->
-                <!--android:layout_marginRight="20dp"-->
-                <!--android:background="@null"-->
-                <!--android:inputType="textCapWords"-->
-                <!--android:drawableBottom="@drawable/underline"-->
-                <!--android:drawablePadding="5dp"-->
-                <!--android:hint="@string/family_name"-->
-                <!--android:padding="7dp"-->
-                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-                <!--android:textColor="@color/black_color" />-->
-                </LinearLayout>
+                android:orientation="vertical"></LinearLayout>
 
             <com.mycity4kids.widget.CustomListView
                 android:id="@+id/add_kid_adult"
@@ -66,27 +31,12 @@
                 android:orientation="vertical"
                 android:visibility="visible" />
 
-            <!--<TextView-->
-                <!--android:id="@+id/additional_adult"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="1dp"-->
-                <!--android:background="@color/white_color"-->
-                <!--android:drawableLeft="@drawable/add_xxhdpi"-->
-                <!--android:drawablePadding="10dp"-->
-                <!--android:gravity="center_vertical"-->
-                <!--android:padding="15dp"-->
-                <!--android:text="ADDITIONAL ADULT ACCOUNT"-->
-                <!--android:textColor="@color/blue_color"-->
-                <!--android:textSize="15dp" />-->
-
             <LinearLayout
                 android:id="@+id/internal_adult_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="0dp"></LinearLayout>
-
+                android:padding="0dp" />
 
             <TextView
                 android:id="@+id/additional_child"
@@ -109,9 +59,7 @@
                 android:orientation="vertical"
                 android:paddingTop="10dp">
 
-
             </LinearLayout>
-
 
         </LinearLayout>
 
