--- a/MyCity4Kids/MyCity4Kids/res/drawable/topics_splash_done_btn_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/topics_splash_done_btn_bg.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/blog.comments.follow_reply_btn" />
+        android:color="@color/splashtopics.done.button" />
 
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/splashtopics.done.button" />
 
     <padding
         android:left="1dp"
