--- a/MyCity4Kids/MyCity4Kids/res/drawable/topics_transparent_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/topics_transparent_bg.xml
@@ -2,14 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/blog.comments.follow_reply_btn" />
-
-    <solid android:color="@color/blog.comments.follow_reply_btn" />
+        android:color="@color/white_color" />
 
     <padding
         android:left="1dp"
         android:right="1dp"
         android:top="1dp" />
 
-    <corners android:radius="4dp" />
+    <corners android:radius="2dp" />
 </shape>
