--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_setting.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_setting.xml
@@ -18,40 +18,48 @@
         android:text="Family Details"
         android:textColor="@color/black_color"
         android:textSize="15sp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray_color" />
+
+    <TextView
+        android:id="@+id/viewFollowingTopics"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginBottom="1dp"
+        android:background="@color/white_color"
+        android:drawablePadding="50dp"
+        android:drawableRight="@drawable/arrow_xxhdpi"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:text="Topics Followed"
+        android:textColor="@color/black_color"
+        android:textSize="15sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray_color" />
+
     <TextView
         android:id="@+id/cityChange"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginBottom="1dp"
         android:background="@color/white_color"
-
         android:drawableRight="@drawable/arrow_xxhdpi"
         android:gravity="center_vertical"
         android:padding="10dp"
         android:text="Change City ()"
         android:textColor="@color/black_color"
         android:textSize="15sp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray_color" />
-    <!--<TextView-->
-        <!--android:id="@+id/notification"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginBottom="1dp"-->
-        <!--android:background="@color/white_color"-->
-        <!--android:drawablePadding="50dp"-->
-        <!--android:drawableRight="@drawable/arrow_xxhdpi"-->
-        <!--android:gravity="center_vertical"-->
-        <!--android:padding="15dp"-->
-        <!--android:text="Notifications"-->
-        <!--android:textColor="@color/new_grey"-->
-        <!--android:textSize="15dp" />-->
 
     <TextView
         android:id="@+id/editProfile"
@@ -66,25 +74,11 @@
         android:text="Edit Profile"
         android:textColor="@color/black_color"
         android:textSize="15sp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray_color" />
-   <!-- <TextView
-        android:id="@+id/sync_setting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white_color"
-        android:drawablePadding="50dp"
-        android:drawableRight="@drawable/arrow_xxhdpi"
-        android:gravity="center_vertical"
-        android:padding="15dp"
-        android:text="Sync Settings"
-        android:textColor="@color/new_grey"
-        android:textSize="15dp" />-->
-
-
 
     <TextView
         android:id="@+id/logout"
@@ -97,6 +91,7 @@
         android:text="Log Out"
         android:textColor="@color/black_color"
         android:textSize="15sp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
