--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_activity.xml
@@ -318,8 +318,27 @@
                 <!-- <add comment dynamically> -->
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/bottomSpacingTextView"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/commnetLout" />
         </RelativeLayout>
     </com.mycity4kids.observablescrollview.ObservableScrollView>
+
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/recommendFloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom_Lout"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="12dp"
+        android:layout_marginRight="17dp"
+        app:fab_colorNormal="@color/ad.fab.bg"
+        app:fab_colorPressed="@color/ad.fab.bg"
+        app:fab_icon="@drawable/heart_outline"
+        app:fab_plusIconColor="@color/white_color"
+        app:fab_size="normal" />
 
     <LinearLayout
         android:id="@+id/bottom_Lout"
