--- a/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
@@ -3,27 +3,15 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <!-- android:paddingBottom="10dp"
-     android:paddingLeft="10dp"
-     android:paddingRight="10dp"
-     android:paddingTop="10dp">-->
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewWidget"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginBottom="2dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp">
-
-
-        <!--    <HorizontalScrollView
-                android:id="@+id/titleContainer"
-                android:layout_width="match_parent"
-                android:layout_height="67dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">-->
 
         <LinearLayout
             android:id="@+id/imvAuthorThumbContainer"
@@ -39,9 +27,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_gravity="fill"
                 android:contentDescription="@string/author_img"
-                android:scaleType="fitXY"
-
-                />
+                android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/txvArticleTitle"
@@ -58,11 +44,8 @@
                 android:singleLine="false"
                 android:text="@string/title"
                 android:textColor="@color/black_color"
-                android:textSize="14sp"
-
-                />
+                android:textSize="14sp" />
         </LinearLayout>
-
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
