--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_splash_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_splash_activity.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey">
+    android:background="@color/white_color">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -18,8 +18,8 @@
         app:titleTextAppearance="@style/ToolbarTheme.Title">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:src="@drawable/ic_search_white_48dp" />
 
         <TextView
@@ -58,7 +58,7 @@
                 android:layout_toStartOf="@+id/searchImageView"
                 android:background="@android:color/transparent"
                 android:ellipsize="end"
-                android:hint="search topics"
+                android:hint="Search Topics"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:singleLine="true"
@@ -131,7 +131,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/white_color"
+        android:background="@color/splashtopics.bottombar.bg"
         android:visibility="gone">
 
         <TextView
@@ -141,7 +141,8 @@
             android:layout_centerVertical="true"
             android:paddingLeft="10dp"
             android:text="Following 3 topics"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:id="@+id/doneLayout"
@@ -157,7 +158,10 @@
                 android:id="@+id/doneTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp"
                 android:text="DONE"
                 android:textColor="@color/white_color" />
         </LinearLayout>
