--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_splash_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_splash_item.xml
@@ -33,7 +33,8 @@
         android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/parentCategoryTextView">
+        android:layout_below="@+id/parentCategoryTextView"
+        android:layout_marginLeft="6dp">
 
         <LinearLayout
             android:id="@+id/popularSubcatLL_1"
